/*
 * Copyright 2016-present the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.center.manager;

import "api/common/base.proto";
import "api/common/enums.proto";
import "api/common/page.proto";
import "api/common/r.proto";

// 配置相关
option java_package = "com.aiforest.tmmes.api.center.manager";
option java_outer_classname = "PointProto";
option objc_class_prefix = "Manager";
option java_multiple_files = true;

// 接口类
service PointApi {
    rpc list (PagePointQueryDTO) returns (RPagePointDTO);
}

// R of Page Point DTO
message RPagePointDTO {
    api.common.RDTO result = 1; // 结果
    PagePointDTO data = 2; // 数据
}

// Page Point Query DTO
message PagePointQueryDTO {
    api.common.PageDTO page = 1; // 结果
    string device_id = 2; // 设备ID
    PointDTO point = 3; // point
}

// Page Point DTO
message PagePointDTO {
    api.common.PageDTO page = 1; // 结果
    repeated PointDTO data = 2; // 数据
}

// Point DTO
message PointDTO {
    api.common.BaseDTO base = 1; // 基础
    string point_name = 2; // 位号名称
    string point_code = 3; // 位号编号
    api.common.PointTypeFlagDTOEnum point_type_flag = 4; // 位号类型标识
    api.common.RwFlagDTOEnum rw_flag = 5; // 读写标识
    double base_value = 6; // 基础值
    double multiple = 7; // 比例系数
    int32 value_decimal = 8; // 数据精度
    string unit = 9; // 单位
    string profile_id = 10; // 模板ID
    string group_id = 11; // 分组ID
    api.common.EnableFlagDTOEnum enable_flag = 12; // 使能标识
    string tenant_id = 13; // 租户ID
}